force-app/main/default/objects/Case/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <label>Cases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Escaleted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>