force-app/main/default/objects/Case/fields/DateA__c.field-meta.xml
<CustomField>
    <fullName>DateA__c</fullName>
    <label>DateA</label>
    <type>DateTime</type>
</CustomField>