force-app/main/default/objects/Case/fields/DateB__c.field-meta.xml
<CustomField>
    <fullName>DateB__c</fullName>
    <label>DateB</label>
    <type>DateTime</type>
</CustomField>